tests/invalid/numeric_literal_context_u8_out_of_range.wio
fn Entry() -> i32 {
    let value: u8 = 300;
    return 0;
}
